gestion des inscriptions par l'admin(Enseignant) et optimisaton de l'api detect_AI